--- a/main.html
+++ b/main.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>My Portfolio Website
-    </title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <title>My Portfolio Website</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#">General</a></li>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#">Iskander</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#"></a></li>
             <li><a href="#">Bio</a></li>
             <li><a href="#">Skills</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Projects</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
     </nav>
-    
+    <div class="section1">
+        <h2 class="bio">Iskander Khusnutdinov</h2>
+        <img src="person-pic.jpg" alt="profile picture" class="profile"> 
+        <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque minima possimus sequi, nesciunt rerum officia nobis ipsum ratione tempora facilis error odio ullam quaerat, doloribus aperiam consequuntur, doloremque cupiditate repellendus?</p>
+        <div class="vertical-bar"></div>
+    </div>
+    <div class="section2"><h2 class="projects">Projects</h2></div>
+    <div class="section3"><h2 class="skills">Skills</h2></div>
+    <div class="section4"><h2 class="feedback">Feedback</h2></div>
+    <script src="script.js"></script>
 </body>
 </html>
