--- a/main.html
+++ b/main.html
@@ -23,14 +23,53 @@
         </ul>
     </nav>
     <div class="section1">
-        <h2 class="bio">Iskander Khusnutdinov</h2>
-        <img src="person-pic.jpg" alt="profile picture" class="profile"> 
-        <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque minima possimus sequi, nesciunt rerum officia nobis ipsum ratione tempora facilis error odio ullam quaerat, doloribus aperiam consequuntur, doloremque cupiditate repellendus?</p>
+        <h2 class="heading">Iskander Khusnutdinov</h2>
+        <img src="images/person-pic.jpg" alt="profile picture" class="profile"> 
+        <p class="description">I am Iskander Khusnutdinov, a passionate programmer skilled in Python, SQL, Figma, Git, and Bash. I enjoy developing efficient algorithms, managing databases, and creating user-friendly designs. I thrive in collaborative environments and am committed to contributing to innovative projects.</p>
+        <div class="links-container">
+            <a href="https://github.com/IgorIgorovich2">
+                <img src="/icons/github.png" alt="github-icon" class="github">
+            </a>
+        </div>
         <div class="vertical-bar"></div>
     </div>
-    <div class="section2"><h2 class="projects">Projects</h2></div>
-    <div class="section3"><h2 class="skills">Skills</h2></div>
-    <div class="section4"><h2 class="feedback">Feedback</h2></div>
+    <div class="section2">
+        <h2 class="heading">Projects</h2>
+        <section class="image-panels">
+            <div class="panel">
+                <img src="images/car1.jpg" alt="Description" class="panel-image1">
+                <p class="panel-description">Really big description of a game talking that this is a good game </p> 
+            </div>
+            <div class="panel">
+                <img src="images/car2.jpg" alt="Description" class="panel-image1">
+                <p class="panel-description">Description of image </p> 
+            </div>
+            <div class="panel">
+                <img src="images/car3.jpg" alt="Description" class="panel-image1">
+                <p class="panel-description">Description of image </p> 
+            </div>
+            <div class="panel">
+                <img src="images/car4.jpg" alt="Description" class="panel-image1">
+                <p class="panel-description">Description of image </p> 
+            </div>
+        </section>
+    </div>
+    <div class="section3">
+        <h2 class="heading">Skills</h2>
+        <div class="skills-container">
+            <img src="icons/001-python.png" alt="python-icon" class="icon">
+            <img src="icons/002-terminal.png" alt="terminal-icon" class="icon">
+            <img src="icons/003-database.png" alt="sql-icon" class="icon">
+            <img src="icons/figma.png" alt="figma-icon" class="icon"> 
+            <img src="icons/git.png" alt="git-icon" class="icon">
+            <img src="icons/github.png" alt="github-icon" class="icon">
+        </div> 
+    </div>
+    <div class="section4">
+        <h2 class="heading">Feedback</h2>
+        <h2 class="state">Coming very very soon :)</h2>
+    </div>
+    <footer><p>2025, Iskander Khusnutdinov. All Rights Reserved</p></footer>
     <script src="script.js"></script>
 </body>
 </html>
