--- a/main.html
+++ b/main.html
@@ -15,7 +15,6 @@
             <a href="#">Iskander</a>
         </div>
         <ul class="nav-links">
-            <li><a href="#"></a></li>
             <li><a href="#">Bio</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Projects</a></li>
@@ -24,33 +23,35 @@
     </nav>
     <div class="section1">
         <h2 class="heading">Iskander Khusnutdinov</h2>
-        <img src="images/person-pic.jpg" alt="profile picture" class="profile"> 
-        <p class="description">I am Iskander Khusnutdinov, a passionate programmer skilled in Python, SQL, Figma, Git, and Bash. I enjoy developing efficient algorithms, managing databases, and creating user-friendly designs. I thrive in collaborative environments and am committed to contributing to innovative projects.</p>
+        <div class="profile-container">
+            <img src="images/person-pic.jpg" alt="profile picture" class="profile"> 
+            <p class="description">I am Iskander Khusnutdinov, a passionate programmer skilled in Python, SQL, Figma, Git, and Bash. I enjoy developing efficient algorithms, managing databases, and creating user-friendly designs. I thrive in collaborative environments and am committed to contributing to innovative projects.</p>
+            <div class="vertical-bar"></div>
+        </div>
         <div class="links-container">
             <a href="https://github.com/IgorIgorovich2">
                 <img src="/icons/github.png" alt="github-icon" class="github">
             </a>
         </div>
-        <div class="vertical-bar"></div>
     </div>
     <div class="section2">
         <h2 class="heading">Projects</h2>
         <section class="image-panels">
             <div class="panel">
                 <img src="images/car1.jpg" alt="Description" class="panel-image1">
-                <p class="panel-description">Really big description of a game talking that this is a good game </p> 
+                <p class="panel-description">Really big description of a game talking that this is a good game.</p> 
             </div>
             <div class="panel">
                 <img src="images/car2.jpg" alt="Description" class="panel-image1">
-                <p class="panel-description">Description of image </p> 
+                <p class="panel-description">Description of image.</p> 
             </div>
             <div class="panel">
                 <img src="images/car3.jpg" alt="Description" class="panel-image1">
-                <p class="panel-description">Description of image </p> 
+                <p class="panel-description">Description of image.</p> 
             </div>
             <div class="panel">
                 <img src="images/car4.jpg" alt="Description" class="panel-image1">
-                <p class="panel-description">Description of image </p> 
+                <p class="panel-description">Description of image.</p> 
             </div>
         </section>
     </div>
@@ -69,7 +70,9 @@
         <h2 class="heading">Feedback</h2>
         <h2 class="state">Coming very very soon :)</h2>
     </div>
-    <footer><p>2025, Iskander Khusnutdinov. All Rights Reserved</p></footer>
+    <footer>
+        <p>2025, Iskander Khusnutdinov. All Rights Reserved</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
